--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = 'https://pictorize-backend.onrender.com'
+VITE_BACKEND_URL = ''
 VITE_RAZORPAY_KEY_ID = "----- Razorpay_KEY_ID_here (Optional) ------"
